bpo-31825: Fixed OverflowError in the 'unicode-escape' codec (GH-4058) (#4059)

and in codecs.escape_decode() when decode an escaped non-ascii byte.
(cherry picked from commit 56cb465cc93dcb35aaf7266ca3dbe2dcff1fac5f)